// Storate for training data suitable for max-likelihood training with
// GPs

package indoor_context.proto;

import "vector.proto";

message PayoffFeature {
	required MatF left = 5;
	optional MatF right = 6;  // if omitted then right==left implicitly
	optional string description = 10;  // human-readable description of this feature set
}

message PayoffFeatureSet {
	repeated PayoffFeature features = 1;
}

message FrameWithFeatures {
	required string sequence = 1;  // name of the sequence
	required int32 frame_id = 2;

	required MatI orients = 10;  // column vector
	required MatI path = 11;  // column vector

	required MatF path_features = 20;  // one row per feature
	required int32 num_walls = 21;
	required int32 num_occlusions = 22;

	required PayoffFeatureSet featureset = 30;
}

message SequenceWithFeatures {
	repeated FrameWithFeatures frames = 1;
}
